--- a/examples/cuda/qtl_thrust/CMakeLists.txt
+++ b/examples/cuda/qtl_thrust/CMakeLists.txt
@@ -15,11 +15,9 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 
-ADD_LIBRARY( cmdline_parser SHARED config_manager.cpp help_commandline_option.cpp)
-
 SET(LOCAL_LIBS)
 
-LIST(APPEND LOCAL_LIBS cmdline_parser )
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_config_manager )
 LIST(APPEND LOCAL_LIBS ${CUDA_curand_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${CUDA_cuda_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
@@ -28,12 +26,12 @@ LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
-LIST(APPEND OPTIONS_SRC qtl_thrust_general_options.cpp)
-LIST(APPEND OPTIONS_SRC random_number_options.cpp)
-LIST(APPEND OPTIONS_SRC mutation_rate_option.cpp)
-LIST(APPEND OPTIONS_SRC recombination_rate_option.cpp)
-LIST(APPEND OPTIONS_SRC population_size_option.cpp)
-LIST(APPEND OPTIONS_SRC generations_option.cpp)
+LIST(APPEND OPTIONS_SRC options/qtl_thrust_general_options.cpp)
+LIST(APPEND OPTIONS_SRC options/random_number_options.cpp)
+LIST(APPEND OPTIONS_SRC options/mutation_rate_option.cpp)
+LIST(APPEND OPTIONS_SRC options/recombination_rate_option.cpp)
+LIST(APPEND OPTIONS_SRC options/population_size_option.cpp)
+LIST(APPEND OPTIONS_SRC options/generations_option.cpp)
 
 LIST(APPEND SIM_SRC main.cpp)
 LIST(APPEND SIM_SRC simulate_engine.cu )
