--- a/examples/cuda/unittests/CMakeLists.txt
+++ b/examples/cuda/unittests/CMakeLists.txt
@@ -19,5 +19,5 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 CUDA_ADD_EXECUTABLE(kvsort_test kvsort_test.cu )
 TARGET_LINK_LIBRARIES(kvsort_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
-CUDA_ADD_EXECUTABLE(crossover_test crossover_test.cu )
+CUDA_ADD_EXECUTABLE(crossover_test crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST )
 TARGET_LINK_LIBRARIES(crossover_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
