--- a/examples/cuda/unittests/crossover/CMakeLists.txt
+++ b/examples/cuda/unittests/crossover/CMakeLists.txt
@@ -16,7 +16,5 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 
 # FEATURE TEST PROGRAM
-CUDA_ADD_EXECUTABLE(kvsort_test kvsort_test.cu )
-TARGET_LINK_LIBRARIES(kvsort_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
-
-add_subdirectory( crossover )
+CUDA_ADD_EXECUTABLE(crossover_test crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST )
+TARGET_LINK_LIBRARIES(crossover_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
