--- a/examples/cuda/unittests/crossover/CMakeLists.txt
+++ b/examples/cuda/unittests/crossover/CMakeLists.txt
@@ -16,5 +16,8 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 
 # FEATURE TEST PROGRAM
-CUDA_ADD_EXECUTABLE(crossover_test crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST )
-TARGET_LINK_LIBRARIES(crossover_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+CUDA_ADD_EXECUTABLE(crossover_test_5 crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=5 )
+TARGET_LINK_LIBRARIES(crossover_test_5 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+
+CUDA_ADD_EXECUTABLE(crossover_test_4 crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=4 )
+TARGET_LINK_LIBRARIES(crossover_test_4 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
