Refactored variable name

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -31,6 +31,6 @@ TARGET_LINK_LIBRARIES( ${PROJECT_NAME}_commandline ${Boost_PROGRAM_OPTIONS_LIBRA
 ADD_SUBDIRECTORY(benchmark)
 ADD_SUBDIRECTORY(qtl)
 
-IF( BUILD_CUDA_EXAMPLES )
+IF( WITH_CUDA_EXAMPLES )
 ADD_SUBDIRECTORY(cuda)
-ENDIF( BUILD_CUDA_EXAMPLES )
+ENDIF( WITH_CUDA_EXAMPLES )
