--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ IF( WITH_CUDA_EXAMPLES )
     #SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode=arch=compute_30,code=sm_30")
     LIST(APPEND CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30")
 
+    MESSAGE( STATUS "CUDA VERSION: " ${CUDA_VERSION} )
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_LIBRARIES} )
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_curand_LIBRARY} )
 ENDIF( WITH_CUDA_EXAMPLES )
