--- a/examples/cuda/unittests/crossover/CMakeLists.txt
+++ b/examples/cuda/unittests/crossover/CMakeLists.txt
@@ -21,3 +21,9 @@ TARGET_LINK_LIBRARIES(crossover_test_5 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRAR
 
 CUDA_ADD_EXECUTABLE(crossover_test_4 crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=4 )
 TARGET_LINK_LIBRARIES(crossover_test_4 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+
+CUDA_ADD_EXECUTABLE(crossover_test_3 crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=3 )
+TARGET_LINK_LIBRARIES(crossover_test_3 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+
+CUDA_ADD_EXECUTABLE(crossover_test_3_tex crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=3 -DUSE_TEXTURE_MEMORY_FOR_ALLELE )
+TARGET_LINK_LIBRARIES(crossover_test_3_tex ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
