--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -16,6 +16,7 @@ INCLUDE_DIRECTORIES(${${PROJECT_NAME}_INCLUDE_DIR})
 LIST(APPEND DIRS powerset )
 LIST(APPEND DIRS utility )
 LIST(APPEND DIRS fitness )
+LIST(APPEND DIRS classifiers )
 
 SET(LOCAL_LIBS)
 
