Added crossover_matrix_2 unittest

--- a/examples/cuda/unittests/crossover/CMakeLists.txt
+++ b/examples/cuda/unittests/crossover/CMakeLists.txt
@@ -27,3 +27,6 @@ TARGET_LINK_LIBRARIES(crossover_test_3 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRAR
 
 CUDA_ADD_EXECUTABLE(crossover_test_3_tex crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=3 -DUSE_TEXTURE_MEMORY_FOR_ALLELE )
 TARGET_LINK_LIBRARIES(crossover_test_3_tex ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+
+CUDA_ADD_EXECUTABLE(crossover_test_2 crossover_test.cu OPTIONS -DUSE_CONSTANT_EVENT_LIST -DUSE_CROSSOVER_MATRIX=2)
+TARGET_LINK_LIBRARIES(crossover_test_2 ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
