added configuration for 64-bit bank size when double precision is used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,8 @@ IF( WITH_CUDA_EXAMPLES )
     MESSAGE( STATUS "CUDA VERSION: " ${CUDA_VERSION} )
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_LIBRARIES} )
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_curand_LIBRARY} )
+    MESSAGE( STATUS "CUDA 64 bit device code: " ${CUDA_64_BIT_DEVICE_CODE} )
+    MESSAGE( STATUS "CUDA NVCC FLAGS: " ${CUDA_NVCC_FLAGS} )
 ENDIF( WITH_CUDA_EXAMPLES )
 
 SET( Gperftools_DIR "/opt/gperftools/latest" )
