--- a/examples/cuda/unittests/allele_space/CMakeLists.txt
+++ b/examples/cuda/unittests/allele_space/CMakeLists.txt
@@ -16,8 +16,10 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 
 # FEATURE TEST PROGRAM
-CUDA_ADD_EXECUTABLE(kvsort_test kvsort_test.cu )
-TARGET_LINK_LIBRARIES(kvsort_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+CUDA_ADD_EXECUTABLE(allele_space_unordered_test allele_space_test.cu)
+TARGET_LINK_LIBRARIES(allele_space_unordered_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
 
-add_subdirectory( crossover )
-add_subdirectory( allele_space )
+CUDA_ADD_EXECUTABLE(allele_space_partially_ordered_test allele_space_test.cu OPTIONS -DUSE_PARTIALLY_ORDERED)
+TARGET_LINK_LIBRARIES(allele_space_partially_ordered_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CHRONO_LIBRARY})
+
+ADD_CUSTOM_TARGET( allele_space_tests DEPENDS allele_space_partially_ordered_test allele_space_unordered_test )
