--- a/examples/cuda/qtl_cuda/CMakeLists.txt
+++ b/examples/cuda/qtl_cuda/CMakeLists.txt
@@ -17,10 +17,13 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/cuda )
 
 SET(LOCAL_LIBS)
 
-LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_config_manager )
-LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth )
 LIST(APPEND LOCAL_LIBS ${CUDA_curand_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${CUDA_cuda_LIBRARY})
+
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_config_manager )
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth )
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_cuda )
+
 LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
