--- a/src/clotho/CMakeLists.txt
+++ b/src/clotho/CMakeLists.txt
@@ -14,6 +14,7 @@
 LIST( APPEND CLOTHO_DIRS utility )
 LIST( APPEND CLOTHO_DIRS genetics )
 LIST( APPEND CLOTHO_DIRS configuration_manager )
+LIST( APPEND CLOTHO_DIRS cuda )
 
 FOREACH( D ${CLOTHO_DIRS} )
     ADD_SUBDIRECTORY( ${D} )
