--- a/examples/qtl/CMakeLists.txt
+++ b/examples/qtl/CMakeLists.txt
@@ -18,7 +18,7 @@ SET(LOCAL_LIBS)
 
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility)
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_commandline)
-LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_fitmetric)
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_fitness)
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth)
 LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
