--- a/src/clotho/CMakeLists.txt
+++ b/src/clotho/CMakeLists.txt
@@ -13,6 +13,7 @@
 #   limitations under the License.
 LIST( APPEND CLOTHO_DIRS utility )
 LIST( APPEND CLOTHO_DIRS genetics )
+LIST( APPEND CLOTHO_DIRS fitness )
 LIST( APPEND CLOTHO_DIRS configuration_manager )
 LIST( APPEND CLOTHO_DIRS cuda )
 
