--- a/src/clotho/genetics/CMakeLists.txt
+++ b/src/clotho/genetics/CMakeLists.txt
@@ -13,13 +13,13 @@
 #   limitations under the License.
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 
-LIST( APPEND METRIC_SRCS normal_fitness_metric.cpp )
-LIST( APPEND METRIC_SRCS normal_fitness_generator.cpp )
-LIST( APPEND METRIC_SRCS quadratic_fitness_metric.cpp )
-LIST( APPEND METRIC_SRCS quadratic_fitness_generator.cpp )
-LIST( APPEND METRIC_SRCS fitness_toolkit.cpp )
-
-ADD_LIBRARY( ${PROJECT_NAME}_fitmetric SHARED ${METRIC_SRCS} )
+#LIST( APPEND METRIC_SRCS normal_fitness_metric.cpp )
+#LIST( APPEND METRIC_SRCS normal_fitness_generator.cpp )
+#LIST( APPEND METRIC_SRCS quadratic_fitness_metric.cpp )
+#LIST( APPEND METRIC_SRCS quadratic_fitness_generator.cpp )
+#LIST( APPEND METRIC_SRCS fitness_toolkit.cpp )
+#
+#ADD_LIBRARY( ${PROJECT_NAME}_fitmetric SHARED ${METRIC_SRCS} )
 
 LIST( APPEND GROWTH_SRCS linear_population_growth.cpp )
 LIST( APPEND GROWTH_SRCS linear_population_growth_generator.cpp )
