Removed COMMON_LIBRARIES from linking path. Avoids adding TCMALLOC and PROFILER if they are enabled. They may cause issues with CUDA code

--- a/examples/cuda/qtl_cuda/CMakeLists.txt
+++ b/examples/cuda/qtl_cuda/CMakeLists.txt
@@ -28,7 +28,7 @@ LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
-LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
+#LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 LIST(APPEND OPTIONS_SRC options/configuration_option.cpp )
 LIST(APPEND OPTIONS_SRC options/log_prefix_option.cpp)
