--- a/examples/cuda/unittests/CMakeLists.txt
+++ b/examples/cuda/unittests/CMakeLists.txt
@@ -21,3 +21,4 @@ TARGET_LINK_LIBRARIES(kvsort_test ${CUDA_curand_LIBRARY} ${CUDA_cuda_LIBRARY} ${
 
 add_subdirectory( crossover )
 add_subdirectory( allele_space )
+add_subdirectory( hamming_weight )
