--- a/src/clotho/CMakeLists.txt
+++ b/src/clotho/CMakeLists.txt
@@ -15,7 +15,12 @@ LIST( APPEND CLOTHO_DIRS utility )
 LIST( APPEND CLOTHO_DIRS genetics )
 LIST( APPEND CLOTHO_DIRS fitness )
 LIST( APPEND CLOTHO_DIRS configuration_manager )
-LIST( APPEND CLOTHO_DIRS cuda )
+#LIST( APPEND CLOTHO_DIRS recombination )
+#LIST( APPEND CLOTHO_DIRS mutation )
+
+IF( WITH_CUDA_EXAMPLES )
+    LIST( APPEND CLOTHO_DIRS cuda )
+ENDIF( WITH_CUDA_EXAMPLES )
 
 FOREACH( D ${CLOTHO_DIRS} )
     ADD_SUBDIRECTORY( ${D} )
