--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,7 +14,12 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 
-LIST( APPEND SRCS common_commandline.cpp )
+LIST( APPEND SRCS common_commandline.cpp)
+LIST( APPEND SRCS common_strings.cpp)
+LIST( APPEND SRCS generation_parameter.cpp)
+LIST( APPEND SRCS population_parameter.cpp)
+LIST( APPEND SRCS logging_parameter.cpp)
+LIST( APPEND SRCS seed_parameter.cpp)
 LIST( APPEND SRCS simulation_config_json.cpp )
 LIST( APPEND SRCS simulation_config.cpp )
 
