Fixed QUAD_NAME definition. Unable to define QUAD_NAME in utility because the static instance of quadratic_fitness_generator attempts to access the variable before it has been initialized (translation units initialization order is undefined). Fixed default values

--- a/examples/cuda/qtl_cuda/CMakeLists.txt
+++ b/examples/cuda/qtl_cuda/CMakeLists.txt
@@ -23,6 +23,7 @@ LIST(APPEND LOCAL_LIBS ${CUDA_cuda_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_config_manager )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_cuda )
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_cuda_fitness )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility )
 
 LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
