--- a/src/clotho/cuda/CMakeLists.txt
+++ b/src/clotho/cuda/CMakeLists.txt
@@ -16,3 +16,5 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 LIST(APPEND CUDA_SRC curand_state_pool.cu )
 
 CUDA_ADD_LIBRARY( ${PROJECT_NAME}_cuda SHARED ${CUDA_SRC})
+
+ADD_SUBDIRECTORY(fitness)
