--- a/src/clotho/fitness/CMakeLists.txt
+++ b/src/clotho/fitness/CMakeLists.txt
@@ -15,6 +15,7 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 
 LIST( APPEND METRIC_SRCS normal_fitness_metric.cpp )
 LIST( APPEND METRIC_SRCS normal_fitness_generator.cpp )
+LIST( APPEND METRIC_SRCS quadratic_fitness_parameter.cpp )
 LIST( APPEND METRIC_SRCS quadratic_fitness_metric.cpp )
 LIST( APPEND METRIC_SRCS quadratic_fitness_generator.cpp )
 LIST( APPEND METRIC_SRCS fitness_toolkit.cpp )
