--- a/examples/cuda/qtl_cuda/CMakeLists.txt
+++ b/examples/cuda/qtl_cuda/CMakeLists.txt
@@ -36,6 +36,7 @@ LIST(APPEND OPTIONS_SRC options/configuration_option.cpp )
 LIST(APPEND OPTIONS_SRC options/log_prefix_option.cpp)
 LIST(APPEND OPTIONS_SRC ../../generation_parameter.cpp)
 LIST(APPEND OPTIONS_SRC ../../logging_parameter.cpp)
+LIST(APPEND OPTIONS_SRC ../../qtl/qtl_logging_parameter.cpp)
 #LIST(APPEND OPTIONS_SRC options/random_number_options.cpp)
 #LIST(APPEND OPTIONS_SRC options/mutation_rate_option.cpp)
 #LIST(APPEND OPTIONS_SRC options/recombination_rate_option.cpp)
