--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -108,3 +108,7 @@ TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover4 ${LOCAL_LIBS})
 CUDA_ADD_EXECUTABLE(qtl_cuda_unit_ordered_xover2 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_UNIT_ORDERING;-DCROSSOVER_VERSION=2)
 SET_TARGET_PROPERTIES( qtl_cuda_unit_ordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered_xover2 ${LOCAL_LIBS})
+
+CUDA_ADD_EXECUTABLE(QTLSim ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=4)
+SET_TARGET_PROPERTIES(QTLSim PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim ${LOCAL_LIBS})
