--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,6 +34,7 @@ TARGET_LINK_LIBRARIES( ${PROJECT_NAME}_commandline ${Boost_PROGRAM_OPTIONS_LIBRA
 
 ADD_SUBDIRECTORY(benchmark)
 ADD_SUBDIRECTORY(qtl)
+ADD_SUBDIRECTORY(QTLSim)
 
 IF( WITH_CUDA_EXAMPLES )
 ADD_SUBDIRECTORY(cuda)
