updates to add unittest

--- a/unittest/data_spaces/CMakeLists.txt
+++ b/unittest/data_spaces/CMakeLists.txt
@@ -17,6 +17,7 @@ LIST(APPEND DATA_SPACE_SRCS allele_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS association_matrix_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS genetic_space_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS trait_accumulator_test.cpp )
+LIST(APPEND DATA_SPACE_SRCS free_space_test.cpp )
 
 
 ADD_LIBRARY(${PROJECT_NAME}_data_spaces_test SHARED ${DATA_SPACE_SRCS} )
