--- a/unittest/data_spaces/CMakeLists.txt
+++ b/unittest/data_spaces/CMakeLists.txt
@@ -20,6 +20,7 @@ LIST(APPEND DATA_SPACE_SRCS trait_accumulator_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS free_space_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS allele_generator_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS crossover_test.cpp )
+LIST(APPEND DATA_SPACE_SRCS selection_test.cpp )
 
 
 ADD_LIBRARY(${PROJECT_NAME}_data_spaces_test SHARED ${DATA_SPACE_SRCS} )
