Adding new functionality and unittests

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -37,6 +37,7 @@ LIST(APPEND OPTIONS_SRC ../qtl/qtl_logging_parameter.cpp)
 
 LIST(APPEND OPTIONS_SRC simulation_log.cpp)
 LIST(APPEND OPTIONS_SRC qtlsim_common.cpp)
+LIST(APPEND OPTIONS_SRC engine_logger.cpp)
 
 IF( WITH_CUDA_EXAMPLES )
 
@@ -118,5 +119,11 @@ LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 SET(SIM_SRC main.cpp)
 
 ADD_EXECUTABLE( QTLSim ${SIM_SRC} ${OPTIONS_SRC} )
+SET_TARGET_PROPERTIES(QTLSim PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim ${LOCAL_LIBS})
+
+SET(SIM_SRC qtlsim_main.cpp)
+
+ADD_EXECUTABLE( QTLSim2 ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim ${LOCAL_LIBS})
