--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -127,3 +127,7 @@ SET(SIM_SRC qtlsim_main.cpp)
 ADD_EXECUTABLE( QTLSim2 ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim2 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim2 ${LOCAL_LIBS})
+
+ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} )
+SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS})
