More performance enhancements

--- a/unittest/data_spaces/CMakeLists.txt
+++ b/unittest/data_spaces/CMakeLists.txt
@@ -14,7 +14,7 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 
 LIST(APPEND DATA_SPACE_SRCS allele_test.cpp )
-LIST(APPEND DATA_SPACE_SRCS association_matrix_test.cpp )
+#LIST(APPEND DATA_SPACE_SRCS association_matrix_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS column_aligned_genetic_space_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS trait_accumulator_test.cpp )
 LIST(APPEND DATA_SPACE_SRCS free_space_test.cpp )
