Adding new debug executable

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -131,3 +131,7 @@ TARGET_LINK_LIBRARIES(QTLSim2 ${LOCAL_LIBS})
 ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS})
+
+ADD_EXECUTABLE( QTLSim2_row_aligned_debug ${SIM_SRC} ${OPTIONS_SRC} )
+SET_TARGET_PROPERTIES(QTLSim2_row_aligned_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim2_row_aligned_debug ${LOCAL_LIBS})
