Turning benchmark algorithms to be turned back on

--- a/examples/benchmark/CMakeLists.txt
+++ b/examples/benchmark/CMakeLists.txt
@@ -28,8 +28,9 @@ LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
 
 ADD_EXECUTABLE( benchmark_all_neutral benchmark.cpp )
+SET_TARGET_PROPERTIES(benchmark_all_neutral PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(benchmark_all_neutral ${LOCAL_LIBS})
 
 ADD_EXECUTABLE( benchmark_selected benchmark.cpp )
-SET_TARGET_PROPERTIES(benchmark_all_neutral PROPERTIES COMPILE_DEFINITIONS "ALL_SELECTED_ALLELES")
+SET_TARGET_PROPERTIES(benchmark_all_selected PROPERTIES COMPILE_DEFINITIONS "ALL_SELECTED_ALLELES" LINK_FLAGS "-Wl,--no-as-needed")
 TARGET_LINK_LIBRARIES(benchmark_selected ${LOCAL_LIBS})
