--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,11 +67,11 @@ IF( GSL_FOUND )
 ENDIF( GSL_FOUND )
 LIST( APPEND COMMON_LIBRARIES ${GSL_LIBRARIES} )
 
-FIND_PACKAGE( CUDA REQUIRED )
-MESSAGE( STATUS "CXX: " ${CMAKE_CXX_COMPILER})
-SET(CUDA_HOST_COMPILER g++)
-SET(CUDA_SEPARABLE_COMPILATION ON )
-SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
+#FIND_PACKAGE( CUDA REQUIRED )
+#MESSAGE( STATUS "CXX: " ${CMAKE_CXX_COMPILER})
+#SET(CUDA_HOST_COMPILER g++)
+#SET(CUDA_SEPARABLE_COMPILATION ON )
+#SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 #SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20")
 
 MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_LIBRARIES} )
