--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -38,7 +38,6 @@ LIST(APPEND OPTIONS_SRC ../qtl/qtl_logging_parameter.cpp)
 LIST(APPEND OPTIONS_SRC simulation_log.cpp)
 LIST(APPEND OPTIONS_SRC qtlsim_common.cpp)
 LIST(APPEND OPTIONS_SRC log_writer.cpp)
-LIST(APPEND OPTIONS_SRC qtlsim_logger.cpp)
 
 IF( WITH_CUDA_EXAMPLES )
 
@@ -141,6 +140,6 @@ ADD_EXECUTABLE( QTLSim2_row_vector ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim2_row_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim2_row_vector ${LOCAL_LIBS})
 
-ADD_EXECUTABLE( QTLSimMT qtlsim_main_mt.cpp ${OPTIONS_SRC} )
+ADD_EXECUTABLE( QTLSimMT qtlsim_main_mt.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
 SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
