Updates to tasks and multithread simulator

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -128,18 +128,22 @@ ADD_EXECUTABLE( QTLSim2 ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim2 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim2 ${LOCAL_LIBS})
 
-ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} )
-SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS})
+ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
+SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
-ADD_EXECUTABLE( QTLSim2_row_aligned_debug ${SIM_SRC} ${OPTIONS_SRC} )
-SET_TARGET_PROPERTIES(QTLSim2_row_aligned_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2_row_aligned_debug ${LOCAL_LIBS})
+ADD_EXECUTABLE( QTLSim2_row_aligned_debug ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
+SET_TARGET_PROPERTIES(QTLSim2_row_aligned_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;DEBUG_MODE;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSim2_row_aligned_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSim2_row_vector ${SIM_SRC} ${OPTIONS_SRC} )
 SET_TARGET_PROPERTIES(QTLSim2_row_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSim2_row_vector ${LOCAL_LIBS})
 
-ADD_EXECUTABLE( QTLSimMT qtlsim_main_mt.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
+ADD_EXECUTABLE( QTLSimMT qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+ADD_EXECUTABLE( QTLSimMT_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
