--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -114,7 +114,7 @@ TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
 
 ENDIF(WITH_CUDA_EXAMPLES)
 
-LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
+#LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 SET(SIM_SRC main.cpp)
 
@@ -150,7 +150,9 @@ TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boo
 
 ADD_EXECUTABLE( QTLSimMT_batch qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
 SET_TARGET_PROPERTIES(QTLSimMT_batch PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+#TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_batch_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
 SET_TARGET_PROPERTIES(QTLSimMT_batch_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
