Fixed memory allocation bug

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -114,7 +114,7 @@ TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
 
 ENDIF(WITH_CUDA_EXAMPLES)
 
-#LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
+LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 SET(SIM_SRC main.cpp)
 
